--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     body {
         background-color: #FFFFFF;
-        background-image: url("/assets/css/bg.jpg");
+        background-image: url("%E5%81%A5%E5%BA%B7%E8%AF%81%E6%9F%A5%E8%AF%A2%E7%BB%93%E6%9E%9C_files/bg.jpg");
         background-repeat: repeat-x;
     }
     
