--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     }
 	.aabb {
             background-color: #FFFFFF;
-            background-image: url("/assets/img/sybg.png") !important;
+            background-image: url("%E5%81%A5%E5%BA%B7%E8%AF%81%E6%9F%A5%E8%AF%A2%E7%BB%93%E6%9E%9C_files/sybg.png") !important;
             background-repeat: repeat-x;
         }
     
